WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112047
Regression(
r143542
): -webkit-align-items: center with overflow: auto/scroll has extra bottom padding
https://bugs.webkit.org/show_bug.cgi?id=112047
Summary
Regression(r143542): -webkit-align-items: center with overflow: auto/scroll h...
Timothy Hatcher
Reported
2013-03-11 11:59:31 PDT
Created
attachment 192522
[details]
Testcase See the attached test case and scroll down. See the empty space being allotted for the image but not being used? The image should not extend off the top into the area that can't be seen. The behavior as-is really only makes sense with overflow: visible. Is this a problem with WebKit or a problem with the spec? <
rdar://problem/13392441
>
Attachments
Testcase
(330 bytes, text/html)
2013-03-11 11:59 PDT
,
Timothy Hatcher
no flags
Details
Patch
(8.22 KB, patch)
2013-03-12 18:08 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-03-11 12:00:44 PDT
<
rdar://problem/13392908
>
Simon Fraser (smfr)
Comment 2
2013-03-11 12:03:45 PDT
***
Bug 112048
has been marked as a duplicate of this bug. ***
Tony Chang
Comment 3
2013-03-11 12:15:48 PDT
This is how the spec is defined. center is supposed to distribute space equally between the top and the bottom, so we overflow off the top. If you want the more common behavior of "safe" centering (if there's overflow, only overflow in the scroll direction only), you can set the margin top and margin bottom to auto. It's not clear to me if that works for what you're trying to do here since that doesn't produce a scroll bar. What behavior do you want?
Tony Chang
Comment 4
2013-03-11 12:16:35 PDT
To clarify safe centering: You set the margin top and margin bottom to auto on the img (flex item).
Tony Chang
Comment 5
2013-03-11 12:23:22 PDT
Also, it looks like on Chrome 26, there's no extra space below the image, but in Chrome 27 and ToT there is. That seems like a regression.
Ojan Vafai
Comment 6
2013-03-11 12:25:01 PDT
Even in Chrome 26, we do true centering, which is kind of weird when overflow is not visible. I think we should propose changing the spec to only do true centering for overflow:visible.
Timothy Hatcher
Comment 7
2013-03-11 12:39:26 PDT
I think it only makes sense for overflow: visible. I will try margin: auto in my original content for now. Thanks!
Timothy Hatcher
Comment 8
2013-03-11 13:03:11 PDT
FWIW, the deprecated flexbox smartly centers in overflow: auto/scroll.
Radar WebKit Bug Importer
Comment 9
2013-03-11 13:03:30 PDT
<
rdar://problem/13393535
>
Ojan Vafai
Comment 10
2013-03-11 13:09:12 PDT
Can you give a use-case for using center alignment and overflow:scroll/auto? A use-case would be helpful for making an argument on www-style.
Timothy Hatcher
Comment 11
2013-03-11 13:25:15 PDT
The use case is to just center an image in the container when it is small. When it is large overflow where you can still see the whole image by scrolling down. Using margin: auto does work, so I'm fine with that. If the spec isn't changes then -webkit-align-items: center causing dead whitespace should be fixed. Right now it is weird you can only see the whole image if you use flex-start or stretch. The other keywords can hide content off the top and still allow you to scroll to see content at the end. Thinking about it logically, I think flex-end should set the scroll position and force you to scroll up to see the overflow. Same could be said for center, force the scroll position to be centered and you can scroll up or down in the overflow. The initial visual display is just a clipped version of the overflow: visible result. Does that make sense? I'm not sure if that would fly with the spec editors though…
Tony Chang
Comment 12
2013-03-11 13:48:30 PDT
I'm going to focus this bug on fixing the extra whitespace being allotted for the image. We can file a new bug if the spec gets updated and we want to special case centering based on overflow.
Tony Chang
Comment 13
2013-03-12 18:08:00 PDT
Created
attachment 192844
[details]
Patch
Ojan Vafai
Comment 14
2013-03-13 12:19:33 PDT
Comment on
attachment 192844
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192844&action=review
> Source/WebCore/rendering/RenderFlexibleBox.cpp:442 > + if (child->isOutOfFlowPositioned()) > + continue;
Maybe add a test-case with out of flow positioned children? Or does one of the existing test cases already cover this?
> Source/WebCore/rendering/RenderFlexibleBox.cpp:444 > + LayoutUnit childLogicalBottom = logicalTopForChild(child) + logicalHeightForChild(child) + marginAfterForChild(child); > + maxChildLogicalBottom = std::max(maxChildLogicalBottom, childLogicalBottom);
Technically, we only need to do this if the child is aligned center or flex-end, but I suppose it's not worth the extra code.
WebKit Review Bot
Comment 15
2013-03-13 12:31:14 PDT
Comment on
attachment 192844
[details]
Patch Clearing flags on attachment: 192844 Committed
r145736
: <
http://trac.webkit.org/changeset/145736
>
WebKit Review Bot
Comment 16
2013-03-13 12:31:18 PDT
All reviewed patches have been landed. Closing bug.
Tony Chang
Comment 17
2013-03-13 15:06:19 PDT
(In reply to
comment #14
)
> (From update of
attachment 192844
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=192844&action=review
> > > Source/WebCore/rendering/RenderFlexibleBox.cpp:442 > > + if (child->isOutOfFlowPositioned()) > > + continue; > > Maybe add a test-case with out of flow positioned children? Or does one of the existing test cases already cover this?
Sure,
https://bugs.webkit.org/show_bug.cgi?id=112294
has a test case for this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug