Regression(r143542): -webkit-align-items: center with overflow: auto/scroll has extra bottom padding https://bugs.webkit.org/show_bug.cgi?id=112047

Reviewed by Ojan Vafai.

Source/WebCore:

Add a new pass for computing the client bottom edge that runs after we've repositioned children
due to wrap-reverse, flex-end or vertical centering.

Test: css3/flexbox/negative-overflow.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutBlock): Remove the code to use clientLogicalBottom() that was computed before
repositioning. The repositioning can change the edge.
(WebCore::RenderFlexibleBox::clientLogicalBottomAfterRepositioning): Compute the new bottom based on the final position
of flex items.
* rendering/RenderFlexibleBox.h:
(RenderFlexibleBox):

LayoutTests:

* css3/flexbox/negative-overflow-expected.txt: Added.
* css3/flexbox/negative-overflow.html: Added.
* resources/check-layout.js: Add attributes for checking scroll width and scroll height.


Canonical link: https://commits.webkit.org/130585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145736 268f45cc-cd09-0410-ab3c-d52691b4dbfc